--- a/lostcity/src/styles/about.scss
+++ b/lostcity/src/styles/about.scss
@@ -1,7 +1,10 @@
+//styling elements
+
 body {
     background-color: whitesmoke;
-
 }
+
+//general layout
 
 .wrapper {
     display: grid;
@@ -23,9 +26,9 @@ body {
     font-weight: 400;
     margin-left: 15%;
     margin: 0;
-
-
 }
+
+//slideshow
 
 .slideshow__about {
     grid-column: 2/4;
@@ -59,9 +62,11 @@ body {
     text-decoration: none;
 }
 
+//media querys
+
 @media screen and (min-width:481px) and (max-width:850px) {
 
-
+    //general layout
 
     .wrapper {
         grid-template-columns: 1fr;
@@ -88,6 +93,7 @@ body {
         margin-top: 3vw;
     }
 
+    //placement of slideshow
     .slideshow__about {
         grid-column: 1/2;
         grid-row: 1/2;
@@ -95,6 +101,7 @@ body {
         display: inline-block;
     }
 
+    //styling buttons
     .button__slideshow {
         margin-top: 5vw;
     }
@@ -103,6 +110,8 @@ body {
 }
 
 @media screen and (max-width:480px) {
+    //general layout
+
     .wrapper {
         grid-template-columns: 1fr;
         grid-template-rows: .5fr 1fr 1fr;
@@ -129,6 +138,8 @@ body {
         font-size: 75%;
 
     }
+
+    //placement of slideshow and buttons
 
     .slideshow__about {
         grid-column: 1/2;
