--- a/lostcity/src/styles/menu_page.scss
+++ b/lostcity/src/styles/menu_page.scss
@@ -1,13 +1,37 @@
 @import "shared/header", "shared/footer";
 
+//styling elements
+
 * {
     background-color: whitesmoke;
 }
+
+p {
+    color: black;
+    font-size: 55%;
+    font-weight: 200;
+    z-index: 1;
+}
+
+h4 {
+    color: red;
+    font-size: 75%;
+    font-weight: 200;
+}
+
+h5 {
+    font-size: 45%;
+    font-weight: 200;
+}
+
+//general layout
 
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
+//nav
 
 .navbar {
     display: grid;
@@ -22,6 +46,8 @@
     font-size: 75%;
     margin: 5%;
 }
+
+//nav buttons
 
 .starters {
     color: white;
@@ -46,6 +72,8 @@
     padding: 3%;
     text-align: center;
 }
+
+//nav animations
 
 .dropbtn:hover,
 .dropbtn:focus {
@@ -79,24 +107,7 @@
     display: block;
 }
 
-p {
-    color: black;
-    font-size: 55%;
-    font-weight: 200;
-    z-index: 1;
-}
-
-h4 {
-    color: red;
-    font-size: 75%;
-    font-weight: 200;
-}
-
-h5 {
-    font-size: 45%;
-    font-weight: 200;
-}
-
+//style within dropdowns
 #starters,
 #burgers,
 #fountain,
@@ -108,10 +119,13 @@ h5 {
     margin: 0;
 }
 
+//styling list items on menues
 .on-menu {
     font-size: 45%;
     font-weight: 200;
 }
+
+//styling menu descriptions
 
 .top-description {
     font-size: 45%;
@@ -122,13 +136,16 @@ h5 {
     padding: 0;
 }
 
+//media querys
 
 @media screen and (min-width:481px) and (max-width:850px) {
 
+    //image re-size
     img {
         min-width: 150%;
     }
 
+    //general layout
     .wrapper {
         display: grid;
         grid-template-columns: 1fr;
@@ -143,6 +160,7 @@ h5 {
 
 @media screen and (max-width:480px) {
 
+    //general layout
     .wrapper {
         display: grid;
         grid-template-columns: 1fr;
