--- a/lostcity/src/styles/homepage.scss
+++ b/lostcity/src/styles/homepage.scss
@@ -287,6 +287,7 @@ img:hover {
         margin-left: 10%;
         margin-right: 10%;
         margin-top: 0;
+        margin-bottom: 15%;
     }
 
     //don't display assets
