--- a/lostcity/src/styles/order_form.scss
+++ b/lostcity/src/styles/order_form.scss
@@ -295,7 +295,6 @@ input[type="radio"]:checked+label {
         text-align: left;
         width: 60vw;
     }
-
 }
 
 @media screen and (max-width:480px) {
@@ -313,6 +312,7 @@ input[type="radio"]:checked+label {
 
     textarea {
         max-width: 100%;
+        height: 20%;
     }
 
     //general layout 
@@ -360,7 +360,7 @@ input[type="radio"]:checked+label {
         width: 50vw;
     }
 
-    //reszing card input
+    //resizing card input
 
     #card_type {
         height: 10vw;
