--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -36,6 +36,8 @@
     grid-column: 1/2;
     max-width: 80%;
     padding-top: 15%;
+    ;
+
 }
 
 //animation for 404 page continues through header
